--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_FIREBASE_API_KEY=
-REACT_APP_FIREBASE_AUTH_DOMAIN=
-REACT_APP_FIREBASE_DATABASE_URL=
-REACT_APP_FIREBASE_PROJECT_ID=
-REACT_APP_FIREBASE_STORAGE_BUCKET=
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=
-REACT_APP_FIREBASE_APP_ID=
+REACT_APP_FIREBASE_API_KEY=AIzaSyDerVcUzyd7iNLc0DuaItZ3Zv3HlYpHEHE
+REACT_APP_FIREBASE_AUTH_DOMAIN=my-todo-app-982e4.firebaseapp.com
+REACT_APP_FIREBASE_DATABASE_URL=https://my-todo-app-982e4.firebaseio.com
+REACT_APP_FIREBASE_PROJECT_ID=my-todo-app-982e4
+REACT_APP_FIREBASE_STORAGE_BUCKET=my-todo-app-982e4.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=56028822051
+REACT_APP_FIREBASE_APP_ID=1:56028822051:web:c47aaf79b7d608e87f8f96
