--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,12 @@ jobs:
         run: npm install
 
       # TODO: Add a stage for running unit tests
+      - name: Run unit tests
+        run: npm run test
 
       # TODO: Add a stage for running cypress tests
+      - name: Run cypress tests
+        run: npm run cypress:open
 
       # TODO: Add a stage to generate cypress videos and screenshots as artifacts
 
